REST API endpoints naming fix and 'reload_task_queue' naming fix
